--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,68 @@
 @import 'tailwindcss';
 
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 100;
+  src: url("/fonts/Paperlogy-1Thin.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 200;
+  src: url("/fonts/Paperlogy-2ExtraLight.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 300;
+  src: url("/fonts/Paperlogy-3Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/Paperlogy-4Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/Paperlogy-5Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 600;
+  src: url("/fonts/Paperlogy-6SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/Paperlogy-7Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 800;
+  src: url("/fonts/Paperlogy-8ExtraBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Paperlogy';
+  font-style: normal;
+  font-weight: 900;
+  src: url("/fonts/Paperlogy-9Black.ttf") format("truetype");
+}
+
 @config '../tailwind.config.ts';
 
 /*
@@ -11,6 +74,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
   *,
   ::after,
   ::before,
@@ -42,7 +106,7 @@
     --destructive-foreground: 0 0% 98%;
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
-	--sidebar-background: 0 0% 98%;
+    --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
@@ -72,7 +136,7 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
     --ring: 0 0% 83.1%;
-	--sidebar-background: 240 5.9% 10%;
+    --sidebar-background: 240 5.9% 10%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
@@ -87,6 +151,7 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
